--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algo-diamond</title>
     <!-- favicon -->
-<link rel="icon" href="./images/favicon.ico">
+<link rel="icon" href="./IMAGES/favicon.ico">
     <!-- custom css -->
     <link rel="stylesheet" href="style.css">
     <!-- icon link -->
@@ -27,7 +27,7 @@
   <nav class="navbar  sticky-top navbar-expand-lg">
     <div class="container animate__animated animate__fadeInDown">
       <a class="navbar-brand text-light fw-bold" href="#header">
-        <img src="/Algo-diamond/our-coin.png" alt="" width="30" height="24">
+        <img src="./IMAGES/our-coin.png" alt="" width="30" height="24">
         ALGO DIAMOND
       </a>
       <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -129,12 +129,12 @@
                </p>
             </div>
             <div class="col-lg-6 col-sm-12 col-md-12 solve animate__animated animate__fadeInUp animate__delay-5s">
-              <img src="/Algo-diamond/problem.svg" alt="" width="500px" height="600px">
+              <img src="./IMAGES/problem.svg" alt="" width="500px" height="600px">
             </div>
           </div>
           <div class="row">
             <div class="col-lg-6 col-sm-12 col-md-12 solve animate__animated animate__fadeInUp animate__delay-5s">
-              <img src="/Algo-diamond/solutions-graphic.png" alt="" width="550px" height="600px">
+              <img src="./IMAGES/solutions-graphic.png" alt="" width="550px" height="600px">
             </div>
             <div class="col-lg-6 col-sm-12 col-md-12 prob animate__animated animate__fadeInUp animate__delay-5s">
               <h3 class="mb-4 text-light">SOLUTIONS              </h3>
@@ -164,7 +164,7 @@
         </div>
         <div class="row container pt-5">
           <div class="col-lg-6 paper justify-content-center col-sm-12 col-md-12 animate__animated animate__fadeInUp animate__delay-4s animate__repeat-3">
-            <img src="/Algo-diamond/whitepaper.png" class="ps-5" alt="" width="450px" height="400px">
+            <img src="./IMAGES/whitepaper.png" class="ps-5" alt="" width="450px" height="400px">
           </div>
           <div class="col-lg-6 col-sm-12 col-md-12 animate__animated animate__fadeInUp animate__delay-5s">
             <h3 class="mb-4">
@@ -209,7 +209,7 @@
         </h2>
         <div class="row container pt-5">
           <div class="col-lg-6 justify-content-center col-sm-12 col-md-12 paper1 animate__animated animate__fadeInUp animate__delay-5s">
-            <img src="/Algo-diamond/our-coin.png" class="ps-5" alt="" width="500px" height="300px">
+            <img src="./IMAGES/our-coin.png" class="ps-5" alt="" width="500px" height="300px">
           </div>
           <div class="col-lg-6 col-sm-12 col-md-12 animate__animated animate__fadeInUp animate__delay-5s">
             <h3 class="mb-4 text-light">
@@ -265,7 +265,7 @@
                
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 paper animate__animated animate__fadeInUp animate__delay-5s">
-              <img src="/Algo-diamond/token.jpeg" alt="" width="450px" height="400px">
+              <img src="./IMAGES/token.jpeg" alt="" width="450px" height="400px">
             </div>
           </div>
         </div>
@@ -278,7 +278,7 @@
         <div class="row p-5">
           <div class="col-lg-6 col-md-12 col-sm-12">
             <h3 class="text-light mb-5">
-              <img src="/Algo-diamond/our-coin.png" alt="" width="30px" height="20px">
+              <img src="./IMAGES/our-coin.png" alt="" width="30px" height="20px">
               ALGO DIAMOND
             </h3>
             <p class="text-light">
